= Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog] and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== [nng-rs Unreleased] ==

=== Added ===

=== Changed ===

* The AIO callback is now `Fn(Aio, AioResult)` instead of `Fn(&Aio, AioResult)`. (#30)
* The pipe notification callback is now `Fn(Pipe, PipeEvent)` instead of `FnMut(Pipe, PipeEvent)`.
* The `Aio::try_clone` function was replaced with deriving `Clone`. (#30)

=== Deprecated ===

=== Removed ===

=== Fixed ===

=== Security ===

//------------------------------------------------------------------------------
// Past Releases
//------------------------------------------------------------------------------

== [nng-rs v0.5.0-rc.2] - 2019=04-27 ==

=== Added ===

* The `Message` and `Header` types now implement `Write`.
* The `Message` type received several new functions to make its API similar to that of a `Vec<u8>` or `VecDeque<u8>`.
* Implemented additional common traits on types:
	** All options: `Clone`, `Copy`, `Debug`, `Display`, `Eq`, `Hash`, `Ord`, `PartialEq`, `PartialOrd`
	** `Aio`: `Eq`, `Hash`, `PartialEq`
	** `Context`: `Eq`, `Hash`, `Ord`, `PartialEq`, `PartialOrd`
	** `Dialer`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Header`: `Default`
	** `Listener`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Message`: `Default`, `FromIterator` for both values and references of `u8`
	** `Pipe`: `Copy`, `Hash`, `Ord`, `PartialOrd`
	** `Protocol`: `Ord`, `PartialOrd`
	** `Socket`: `Hash`, `Ord`, `PartialOrd`
	** `SocketAddr`: `Ord`, `PartialOrd`
* Implemented several of the remaining options. (#5)
	** `NNG_OPT_RECVFD`
	** `NNG_OPT_SENDFD`
	** `NNG_OPT_IPC_PERMISSIONS`
	** `NNG_OPT_IPC_PEER_{GUP}ID`

=== Changed ===

* Renamed several methods to fit the Rust API guidelines:
	** `Message::header` → `Message::as_header`
	** `Message::header_mut` → `Message::as_mut_header`